--- a/app/src/main/res/layout/fragment_app_login.xml
+++ b/app/src/main/res/layout/fragment_app_login.xml
@@ -35,7 +35,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:hint="ID"
+                android:hint="아이디"
                 android:inputType="textPersonName"
                 android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:hint="Password"
+                android:hint="비밀번호"
                 android:inputType="textPersonName"
                 android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,13 +73,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:clickable="true"
                 android:text="회원가입"
                 android:textColor="#000000"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/search_id_pw_button"
                 app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
             <TextView
@@ -92,30 +92,54 @@
                 app:layout_constraintStart_toStartOf="@+id/signUp_button"
                 app:layout_constraintTop_toBottomOf="@+id/signUp_button" />
 
+            <TextView
+                android:id="@+id/search_id_pw_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="아이디 찾기"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/signUp_button" />
+
+            <TextView
+                android:id="@+id/line4"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="#000000"
+                app:layout_constraintEnd_toEndOf="@+id/search_id_pw_button"
+                app:layout_constraintStart_toStartOf="@+id/search_id_pw_button"
+                app:layout_constraintTop_toBottomOf="@+id/search_id_pw_button" />
+
+            <TextView
+                android:id="@+id/search_id_pw_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="40dp"
+                android:clickable="true"
+                android:text="비밀번호 찾기"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/search_id_pw_button"
+                app:layout_constraintTop_toTopOf="@+id/signUp_button" />
+
+            <TextView
+                android:id="@+id/line5"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="#000000"
+                app:layout_constraintEnd_toEndOf="@+id/search_id_pw_button2"
+                app:layout_constraintStart_toStartOf="@+id/search_id_pw_button2"
+                app:layout_constraintTop_toBottomOf="@+id/search_id_pw_button2" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/search_id_pw_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        android:text="아이디, 비밀번호 찾기 >"
-        android:textColor="#000000"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/line4"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/search_id_pw_button"
-        app:layout_constraintStart_toStartOf="@+id/search_id_pw_button"
-        app:layout_constraintTop_toBottomOf="@+id/search_id_pw_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
