--- a/app/src/main/res/layout/fragment_app_search_id.xml
+++ b/app/src/main/res/layout/fragment_app_search_id.xml
@@ -41,12 +41,12 @@
                 android:id="@+id/serachID_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
                 android:layout_marginStart="20dp"
-                android:textStyle="bold"
+                android:layout_marginTop="40dp"
+                android:text="아이디 찾기"
+                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:layout_marginTop="50dp"
-                android:text="아이디 찾기"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/searchIDLayout"
@@ -61,10 +61,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
-                    android:hint="전화번호를 입력하세요."
+                    android:hint="전화번호를 입력해주세요."
                     android:inputType="number"
                     android:maxLength="11"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/search_id_button"
@@ -82,92 +83,27 @@
             <EditText
                 android:id="@+id/searchIDPW_ID_output"
                 android:layout_width="380dp"
-                android:enabled="false"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:text="아이디는 ○○○○○ 입니다."
-                android:textColor="@color/black"
-                android:inputType="text" />
-
-            <TextView
-                android:id="@+id/serachPW_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/black"
-                android:layout_marginTop="70dp"
-                android:layout_marginStart="20dp"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:text="비밀번호 찾기"/>
-
-            <EditText
-                android:id="@+id/searchIDPW_ID_input"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:hint="아이디를 입력하세요."
-                android:inputType="number"
-                android:maxLength="11"
-                android:singleLine="true" />
-
-            <LinearLayout
-                android:id="@+id/searchPWLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-
-                <EditText
-                    android:id="@+id/searchIDPW_number_input2"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:hint="전화번호를 입력하세요."
-                    android:inputType="number"
-                    android:maxLength="11"
-                    android:singleLine="true" />
-
-                <Button
-                    android:id="@+id/search_pw_button"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:text="찾기"
-                    android:background="@drawable/edge_square_brown"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/searchIDPW_PW_output"
-                android:layout_width="380dp"
                 android:enabled="false"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="25dp"
-                android:text="비밀번호는 ○○○○○ 입니다."
-                android:textColor="@color/black"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@color/black" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp">
 
                 <TextView
                     android:id="@+id/to_login_Page_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="로그인"
                     android:textColor="@color/black"
-                    android:layout_marginTop="10dp"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -187,11 +123,11 @@
                     android:id="@+id/to_signUp_Page_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="회원가입"
                     android:textColor="@color/black"
-                    android:layout_marginTop="10dp"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
