--- a/app/src/main/res/layout/fragment_app_signup.xml
+++ b/app/src/main/res/layout/fragment_app_signup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background_color">
@@ -67,7 +68,7 @@
                 android:id="@+id/idLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -83,18 +84,30 @@
 
                 <EditText
                     android:id="@+id/signUp_id_input"
-                    android:layout_width="300dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:hint="ID"
+                    android:hint="아이디 입력"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/signUp_button2"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/edge_square_brown"
+                    android:text="중복확인"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/pwLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -112,16 +125,17 @@
                     android:id="@+id/signUp_pw_input"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="비밀번호 입력"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/verifyPwLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -139,16 +153,17 @@
                     android:id="@+id/signUp_verifyPw_input"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="Verify Password"
+                    android:hint="비밀번호 확인"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/nickNameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -166,16 +181,17 @@
                     android:id="@+id/signUp_nickName_input"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="닉네임"
+                    android:hint="내가 다닌 초등학교의 이름은?"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/phoneNumLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -196,14 +212,15 @@
                     android:hint="전화번호"
                     android:inputType="number"
                     android:maxLength="11"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/addressLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -223,14 +240,15 @@
                     android:layout_height="wrap_content"
                     android:hint="주소"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/preferenceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -252,7 +270,7 @@
                     android:paddingTop="10dp"
                     android:text="우선순위"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <RadioGroup
                     android:id="@+id/preferenceGroup"
@@ -268,7 +286,7 @@
                         android:layout_height="wrap_content"
                         android:text="스터디"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <RadioButton
@@ -277,7 +295,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:text="커피맛"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
                 </RadioGroup>
             </LinearLayout>
@@ -315,38 +333,76 @@
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/add_profileimage_button" />
             </LinearLayout>
+
             <Button
                 android:id="@+id/signUp_button"
-                android:layout_gravity="center"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/edge_square_brown"
                 android:text="회원가입"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/searchID_PW_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:clickable="true"
-                android:text="아이디, 비밀번호 찾기 >"
-                android:textColor="#000000"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/line1"
-                android:layout_width="150dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="20dp"
-                android:background="#000000"
-                android:layout_gravity="center" />
+                <TextView
+                    android:id="@+id/searchID_PW_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="120dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:text="아이디 찾기"
+                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/line6"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#000000"
+                    app:layout_constraintEnd_toEndOf="@+id/searchID_PW_button"
+                    app:layout_constraintStart_toStartOf="@+id/searchID_PW_button"
+                    app:layout_constraintTop_toBottomOf="@+id/searchID_PW_button" />
+
+                <TextView
+                    android:id="@+id/searchID_PW_button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="120dp"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:text="비밀번호 찾기"
+                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/searchID_PW_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/searchID_PW_button" />
+
+                <TextView
+                    android:id="@+id/line7"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#000000"
+                    app:layout_constraintEnd_toEndOf="@+id/searchID_PW_button2"
+                    app:layout_constraintStart_toStartOf="@+id/searchID_PW_button2"
+                    app:layout_constraintTop_toBottomOf="@+id/searchID_PW_button2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
